Feat: 完善部分API
