# src/controllers/DefaultController.ts
@@ -10,9 +10,9 @@ import Controller from './Controller'
 import * as service from '../services/DefaultService'
 import { OpenApiRequest } from 'express-openapi-validator/dist/framework/types'
 import { Response } from 'express'
-import { ServerResponse } from 'http'
-export const apiHitokotoGET = async (request: OpenApiRequest, response: Response) => {
-    await Controller.handleRequest(request, response, service.apiHitokotoGET)
+
+export const apiFacercgGET = async (request: OpenApiRequest, response: Response) => {
+    await Controller.handleRequest(request, response, service.apiFacercgGET)
 }
 
 export const apiImgholderGET = async (request: OpenApiRequest, response: Response) => {
@@ -30,10 +30,6 @@ export const apiPixelArtPOST = async (request: OpenApiRequest, response: Respons
 export const apiKFCCrazyThursdayGET = async (request: OpenApiRequest, response: Response) => {
     response.writeHead(200, {'Content-Type': 'text/html;charset=utf-8'});//设置response编码为utf-8
     await Controller.handleRequest(request, response, service.apiKFCCrazyThursdayGET)
-}
-
-export const apiPoisonousGET = async (request: OpenApiRequest, response: Response) => {
-    await Controller.handleRequest(request, response, service.apiPoisonousGET)
 }
 
 export const apiQrcodeGET = async (request: OpenApiRequest, response: Response) => {
